升级依赖版本